first navbar prototype

--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>hi</title>
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="#who-i-am">Who I am?</a></li>
-            <li><a href="#projects">Some stuff</a></li>
-            <li><a href="#footer">Contact</a></li>
-        </ul>
-    </nav>
+    <div class="container">
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="#who-i-am">Who I am?</a></li>
+                <li><a href="#projects">Some stuff</a></li>
+                <li><a href="#footer">Contact</a></li>
+            </ul>
+            <h1>ill be full stack developer</h1>
+        </nav>
+    </div>
 
     <section id="who-i-am">
         <h3>Who I am?</h3>
