adding flat colors and some fun-borders

--- a/index.html
+++ b/index.html
@@ -11,65 +11,71 @@
 <body>
     <div class="container">
         <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="#who-i-am">Who I am?</a></li>
-                <li><a href="#projects">Some stuff</a></li>
-                <li><a href="#footer">Contact</a></li>
-            </ul>
+            <div class="container-mid">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="#who-i-am">Who I am?</a></li>
+                    <li><a href="#projects">Some stuff</a></li>
+                    <li><a href="#footer">Contact</a></li>
+                </ul>
+            </div>
             <h1>ill be full stack developer</h1>
         </nav>
     </div>
 
     <section id="who-i-am">
-        <h3>Who I am?</h3>
-        <div class="container">
-            <div class="photo">
-                <img src="./img/me.jpg" width="380" alt="im a photo">
-            </div>
-            <div class="info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequatur nisi laudantium esse
-                    recusandae sint praesentium quas sunt, velit tempore id assumenda natus placeat, libero iste
-                    voluptatibus expedita doloremque labore.</p>
+        <div class="container-mid">
+            <div class="container">
+                <h3>Who I am?</h3>
+                <div class="photo">
+                    <img src="./img/me.jpg" width="380" alt="im a photo">
+                </div>
+                <div class="info">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequatur nisi laudantium
+                        esse
+                        recusandae sint praesentium quas sunt, velit tempore id assumenda natus placeat, libero iste
+                        voluptatibus expedita doloremque labore.</p>
+                </div>
             </div>
         </div>
     </section>
 
+    <div class="container">
+        <div class="span-sections-1"></div>
+    </div>
+
     <section id="projects">
-        <h3>My projects</h3>
-        <div class="container">
-            <article>
-                <h4>Project name</h4>
-                <div class="projects-wrap">
-                    <div class="projects-wrap-photo">
-                        <img src="http://incredible-vacations.com/img/destinations/destination1.jpg" alt="Project photo?">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, ipsa!</p>
-                        <a href="#">Github link</a>
+        <div class="container-mid">
+            <h3>My projects</h3>
+            <div class="container">
+                <article>
+                    <h4>Nyan cat attak!</h4>
+                    <div class="projects-wrap">
+                        <div class="projects-wrap-photo">
+                            <img src="http://incredible-vacations.com/img/destinations/destination1.jpg" alt="Project photo?">
+                            <p>Nyan cat terminal fetch</p>
+                            <a href="https://github.com/franlol/nyan.sh">Github link</a>
+                        </div>
                     </div>
-                </div>
-            </article>
-            <article>
-                <h4>Project name</h4>
-                <div class="projects-wrap">
-                    <div class="projects-wrap-photo">
-                        <img src="http://incredible-vacations.com/img/destinations/destination1.jpg" alt="Project photo?">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, ipsa!</p>
-                        <a href="#">Github link</a>
+                </article>
+                <article>
+                    <h4>WiT</h4>
+                    <div class="projects-wrap">
+                        <div class="projects-wrap-photo">
+                            <img src="http://incredible-vacations.com/img/destinations/destination1.jpg" alt="Project photo?">
+                            <p>Script to create a simple initial tree folders for the web development</p>
+                            <a href="https://github.com/franlol/webdeb-init-tree">Github link</a>
+                        </div>
                     </div>
-                </div>
-            </article>
-            <article>
-                <h4>Project name</h4>
-                <div class="projects-wrap">
-                    <div class="projects-wrap-photo">
-                        <img src="http://incredible-vacations.com/img/destinations/destination1.jpg" alt="Project photo?">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, ipsa!</p>
-                        <a href="#">Github link</a>
-                    </div>
-                </div>
-            </article>
+                </article>
+
+            </div>
         </div>
     </section>
+
+    <div class="container">
+            <div class="span-sections-2"></div>
+        </div>
 
     <footer id="footer">
         <div id="footer-info1">
