--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <div class="container">
         <nav>
+            <!-- <h1>ill be full stack developer</h1> -->
+            <h1 id="title"></h1>
             <div class="container-mid">
                 <ul class="navbar-list">
                     <li><a href="">Home</a></li>
@@ -20,36 +22,31 @@
                     <li><a href="#footer">Contact</a></li>
                 </ul>
             </div>
-            <!-- <h1>ill be full stack developer</h1> -->
-            <h1 id="title"></h1>
         </nav>
+    </div>
+
+    <div class="container">
+        <div class="span-sections-0"></div>
     </div>
 
     <section id="who-i-am">
         <div class="container-mid">
             <div class="container who-i-am-container">
-                <div class="who-i-am-photo">
-                    <img src="./img/me.jpg" width="380" alt="im a photo">
-                </div>
                 <div class="who-i-am-info">
+                    <div class="who-i-am-photo">
+                        <img src="./img/me.jpg" width="380" alt="im a photo">
+                    </div>
                     <h3>Who I am?</h3>
 
                     <p>Dessert muffin halvah ice cream I love biscuit jujubes. Tiramisu jelly beans tart cotton candy
                         chocolate cake. Sesame snaps I love bear claw apple pie biscuit sweet. Apple pie dragée dragée
                         gummi bears brownie croissant powder.
-
+                        <br><br>
                         Dragée I love I love lemon drops soufflé gummies marshmallow I love. Fruitcake marshmallow
                         fruitcake bonbon I love bear claw. Tootsie roll jujubes icing oat cake cheesecake cookie carrot
                         cake croissant tiramisu.
-
+                        <br><br>
                         Wafer chupa chups sesame snaps pudding chupa chups cotton candy jelly. I love cheesecake lemon
-                        drops carrot cake gummies sugar plum I love halvah. Danish topping macaroon.
-
-                        Muffin I love chupa chups cotton candy icing pie pudding bear claw. Fruitcake macaroon candy
-                        canes icing lollipop croissant sweet. Pie I love tart wafer.
-
-                        Fruitcake liquorice tootsie roll apple pie tiramisu sweet brownie. Jujubes marshmallow brownie
-                        bonbon candy canes I love I love muffin apple pie. Cookie biscuit carrot cake cake tiramisu I
                         love.</p>
                 </div>
             </div>
