Adding El Nido Dec'18 photo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container who-i-am-container">
                 <div class="who-i-am-info">
                     <div class="who-i-am-photo">
-                        <img src="./img/me.jpg" width="380" alt="im a photo">
+                        <img src="./img/me-elNido-Philippines.jpeg" width="380" alt="im a photo">
                     </div>
                     <h3>Who I am?</h3>
 
